--- a/src/styles/components/mainSectionTati.scss
+++ b/src/styles/components/mainSectionTati.scss
@@ -1,11 +1,14 @@
 .container{
-    margin-top: 50px;
+    margin-top: 20px;
     display: grid;
     justify-items:center ;
     align-items: center;
   
     .imgMainProfile{
-        width: 300px;
+        width: 100%;
+        height: 420px;
+        object-fit: cover;
+        object-position: center;        
     }
     .textContainer{
         display: grid;
