--- a/src/styles/components/mainSectionTati.scss
+++ b/src/styles/components/mainSectionTati.scss
@@ -1,40 +1,80 @@
-.container{
-    margin-top: 20px;
-    display: grid;
-    justify-items:center ;
-    align-items: center;
-  
-    .imgMainProfile{
-        width: 100%;
-        height: 420px;
-        object-fit: cover;
-        object-position: center;        
-    }
-    .textContainer{
-        display: grid;
-        justify-items:center ;
-        align-items: center;
-        h1{
-            margin-top: 25px;
-            text-align: center;
-        }
-        img{
-            margin-top: 15px;
-            width: 350px;
-        }
-        .scrollDown{
-            display: none;
-        }
-    }
-}
+@import "../mixins.scss";
 
-@media (min-width: 1280px) {
-    .container{
-        display: flex;
-        justify-items:center ;
+.main-section {
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  .container {
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-items: center;
+    align-items: center;
+
+    .imgMainProfile {
+      width: 100%;
+      height: auto;
+      border-radius: 4px;
+      object-fit: cover;
+    }
+
+    .textContainer {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+
+      span {
+        margin-top: 15px;
+        font-size: 1.2rem;
+        letter-spacing: 0.7px;
+        font-weight: 500;
+      }
+
+      img {
+        margin-top: 15px;
+        width: 80%;
+        max-width: 350px;
+      }
+
+      .scrollDown {
+        display: none;
+        margin-top: 15px;
+        font-size: 0.9rem;
         align-items: center;
-        .scrollDown{
-            display: block;
+
+        svg {
+          margin-bottom: 5px;
         }
+
+        span {
+          margin-left: 8px;
+        }
+      }
+    }
+
+    @include responsive('tablet') {
+      grid-template-columns: 1fr 1fr; 
+      gap: 40px;
+
+      .imgMainProfile {
+        max-width: 480px;
+        height: 480px;
+      }
+
+      .textContainer {
+        align-items: flex-start;
+        span {
+          font-size: 1.8rem;
+        }
+        img {
+          width: 350px;
+        }
+        .scrollDown {
+          display: flex;
+        }
+      }
     }
   }
+}
