--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 @import './variables.scss';
-*{
+@import 'mixins.scss';
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -8,8 +10,12 @@
     color: white;
 }
 body{
+    // todo: linear gradient bg
     background-color: $main-color ;
-  
+
     margin: 0 20px;
-    
+
+    @include responsive(desktop) {
+        margin: 0 120px;
+    }
 }
