feat: purple bg gradient

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,7 +12,8 @@
 }
 body{
     // todo: linear gradient bg
-    background-color: $main-color ;
+    background: linear-gradient(135.9deg, rgb(109, 25, 252) 16.4%, rgb(125, 31, 165) 56.1%);
+
 
     margin: 0 20px;
 
