--- a/src/styles/components/SchedulingSection.scss
+++ b/src/styles/components/SchedulingSection.scss
@@ -14,8 +14,8 @@
 }
 
     .logoImg{
-        width: 250px;
-        margin: 20px;
+        width: 100%;
+        margin: 30px 0;
     }
     .container{
         .clientImg{ 
@@ -26,7 +26,7 @@
         p{
             font-size: 18px;
             letter-spacing: 1.2px;
-            text-align: center;
+            text-align: start;
         }
         a{
             padding: 25px;
