--- a/src/styles/components/mainSectionTati.scss
+++ b/src/styles/components/mainSectionTati.scss
@@ -37,26 +37,13 @@
       }
 
       .logo {
-        margin-top: 15px;
-        width: 80%;
+        margin-top: 25px;
+        width: 100%;
         max-width: 350px;
       }
 
       .scroll-down {
-        display: flex;
-        align-items: center;
-        margin-top: 20px;
-        font-size: 1rem;
-        transition: opacity 0.3s ease;
-
-        svg.animated-arrow {
-          margin-bottom: 5px;
-          animation: bounce 2s infinite;
-        }
-
-        span {
-          margin-left: 8px;
-        }
+        display: none;
       }
     }
   }
@@ -94,6 +81,8 @@
         }
 
         .scroll-down {
+          
+
           cursor: pointer;
           margin-top: 30px;
 
