feat: Courses content json file

--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -2,8 +2,9 @@
   --color: #560bad;
   font-family: inherit;
   display: inline-block;
-  width: 8em;
+  width: auto;
   height: 2.6em;
+  padding: 0 10px;
   line-height: 2.5em;
   position: relative;
   cursor: pointer;
