--- a/src/styles/components/footer.scss
+++ b/src/styles/components/footer.scss
@@ -13,8 +13,14 @@
         flex-direction: column;
         align-items: center;
         gap: 10px;
-        a{
+        li{
             font-size: 18px;
+            cursor: pointer;
+        }
+        li:hover {
+            opacity: 75%;
+            transition: .3s all ease-in-out;
+          
         }
     }
     .conteudos-container{
@@ -31,6 +37,17 @@
         gap: 25px;
         a{
             font-size: 35px;
+        }
+        a:hover {
+            opacity: 75%;
+            transition: .3s all ease-in-out;
+        }
+        li{
+            font-size: 35px;
+        }
+        li:hover {
+            opacity: 75%;
+            transition: .3s all ease-in-out;
         }
     }
   }
