--- a/src/styles/components/mainSectionTati.scss
+++ b/src/styles/components/mainSectionTati.scss
@@ -68,7 +68,12 @@
         width: 100%;
 
         span {
-          font-size: 24px;
+          font-size: 22px;
+          font-style: italic;
+        }
+        span:hover {
+          transition: all 0.5s ease-out;
+          opacity: 0.8;
         }
 
         .title {
