--- a/src/styles/components/footer.scss
+++ b/src/styles/components/footer.scss
@@ -4,6 +4,7 @@
     list-style-type: none;
   }
   .footer{
+    margin: 40px 0;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -54,6 +55,8 @@
 @include responsive('desktop') {
     .footer{
         display: flex;
+        align-items: center;
+        justify-content: center;
         flex-direction: row;
         gap: 10%;
        
