--- a/src/styles/components/SchedulingSection.scss
+++ b/src/styles/components/SchedulingSection.scss
@@ -12,6 +12,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 0 30px;
 }
 
     .logoImg{
@@ -28,19 +29,22 @@
             width: 350px;
              margin:280px 0px 20px 0px;
              border-radius: 2%;
+             box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
          }
         p{
             font-size: 18px;
             letter-spacing: 1.2px;
             text-align: start;
+            margin-bottom: 30px;
         }
         a{
-            padding: 25px;
+            padding: 30px 0;
             font-size: 20px;
         }
         a:hover{
             transition: all 0.5s ease-out;
             opacity: 0.8;
+            text-decoration: underline;
         }
     }
     @include responsive('desktop') {
