--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -10,20 +10,31 @@
     flex-direction: column;
     align-items: flex-start;
     gap: 20px;
+    margin-bottom: 40px;
+
+    p {
+      white-space: pre-line;
+      margin-bottom: 10px;
+    }
+
   }
 
   .card-image {
-    border-radius: 4px;
+    border-radius: 6px;
     width: 100%;
     height: 300px;
     object-fit: cover;
     margin-bottom: 20px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   }
 
   .card-title {
+    font-family: "PT Serif", serif;
+    letter-spacing: 0.8px;
     font-weight: 600;
     font-size: 28px;
   }
+
 
   @include responsive("tablet") {
     flex-direction: row;
