--- a/src/styles/components/courses.scss
+++ b/src/styles/components/courses.scss
@@ -1,9 +1,11 @@
-// todo: fazer responsividade
+@import "../mixins.scss";
 
 .courses-container {
   margin: 50px 0;
 
   h2 {
+    font-family: "PT Serif", serif;
+    letter-spacing: 1.2px;
     font-weight: 400;
     text-align: center;
     font-size: 2.5rem;
@@ -13,4 +15,11 @@
   .face-to-face-courses {
     margin-top: 70px;
   }
+
+  @include responsive("tablet") {
+    .online-courses {
+      margin-top: 90px;
+    }
+  }
+  
 }
