--- a/src/styles/components/footer.scss
+++ b/src/styles/components/footer.scss
@@ -28,7 +28,7 @@
         p{
             text-align: center;
             font-size: 16px;
-            margin-bottom: 20px;
+            margin: 40px 0;
         }
     }
     .icons{
