--- a/src/styles/components/mainSectionTati.scss
+++ b/src/styles/components/mainSectionTati.scss
@@ -20,6 +20,7 @@
       border-radius: 8px;
       object-fit: cover;
       transition: transform 0.3s ease;
+      box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     }
 
     .text-container {
