fix: adjustments, serif font and content

--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -9,7 +9,7 @@
   position: relative;
   cursor: pointer;
   overflow: hidden;
-  border: 2px solid #fff; /* Borda branca */
+  border: 2px solid #fff;
   transition: color 0.5s, background-color 0.5s, border-color 0.5s;
   z-index: 1;
   font-size: 17px;
