--- a/src/styles/components/coursesCard.scss
+++ b/src/styles/components/coursesCard.scss
@@ -29,10 +29,11 @@
   }
 
   .card-title {
-    font-family: "PT Serif", serif;
+    font-family: "Roboto Serif", serif;
     letter-spacing: 0.8px;
-    font-weight: 600;
-    font-size: 28px;
+    font-weight: 300;
+    font-style: italic;
+    font-size: 32px;
   }
 
 
