--- a/src/styles/components/mainSectionTati.scss
+++ b/src/styles/components/mainSectionTati.scss
@@ -31,10 +31,12 @@
       margin-top: 10px;
 
       .title {
+        font-family: "Roboto Serif", serif;
+        font-weight: 300;
+        font-style: italic;
         margin-top: 20px;
         font-size: 1.2rem;
         letter-spacing: 1px;
-        font-weight: 600;
       }
 
       .logo {
