--- a/src/styles/components/SchedulingSection.scss
+++ b/src/styles/components/SchedulingSection.scss
@@ -12,8 +12,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 0 30px;
+   
 }
+    .btn-container {
+        margin-top: 40px;
+        display: flex;
+        justify-content: center;
+    }
 
     .logoImg{
         width: 350px;
@@ -24,6 +29,7 @@
         z-index: 85; 
     }
     .container{
+       
         .clientImg{ 
            
             width: 350px;
@@ -33,18 +39,20 @@
          }
         p{
             font-size: 18px;
-            letter-spacing: 1.2px;
             text-align: start;
             margin-bottom: 30px;
+            
+            .span-text {
+                font-weight: bold;
+            }
         }
+        
         a{
-            padding: 30px 0;
             font-size: 20px;
         }
         a:hover{
             transition: all 0.5s ease-out;
             opacity: 0.8;
-            text-decoration: underline;
         }
     }
     @include responsive('desktop') {
