--- a/src/styles/components/courses.scss
+++ b/src/styles/components/courses.scss
@@ -4,9 +4,10 @@
   margin: 50px 0;
 
   h2 {
-    font-family: "PT Serif", serif;
+    font-family: "Roboto Serif", serif;
     letter-spacing: 1.2px;
-    font-weight: 400;
+    font-weight: 100;
+    font-style: italic;
     text-align: center;
     font-size: 2.5rem;
     margin-bottom: 20px;
