--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap');
 @import "./variables.scss";
 @import "mixins.scss";
 
@@ -11,7 +11,6 @@
     color: white;
 }
 body {
-    // todo: linear gradient bg
     background: rgb(84,29,92);
     background: linear-gradient(90deg, rgba(84,29,92,1) 30%, rgba(103,36,113,1) 100%);
     margin: 0 20px;
