--- a/src/styles/components/coursesCard.scss
+++ b/src/styles/components/coursesCard.scss
@@ -22,8 +22,10 @@
   .card-image {
     border-radius: 6px;
     width: 100%;
-    height: 300px;
-    object-fit: cover;
+    max-width: 100%; 
+    height: 100%; 
+    max-height: 340px; 
+    object-fit: cover; 
     margin-bottom: 20px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   }
